# guru

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml
examples/: advanced.py  basic.py  run_guru.py
src/: __main__.py  core.py  health.py  utils.py
src/guru/: __init__.py  cli.py  curriculum.py  models.py  report.py
src/guru/assistant/: __init__.py  feedback.py  grader.py  lesson_planner.py  qa_engine.py
tests/: test_assistant.py  test_benchmark.py  test_core.py  test_integration.py
